Remove depracated new URL(String)